--- a/resources/private/ui-components/guest-authorities/guest-authorities-template.html
+++ b/resources/private/ui-components/guest-authorities/guest-authorities-template.html
@@ -19,7 +19,7 @@
               </tr>
             </thead>
             <tbody data-bind="foreach: guests">
-              <tr>
+              <tr data-bind="attr: {'data-test-guest-role': role}">
                 <td data-bind="text: role"></td>
                 <td data-bind="text: name"></td>
                 <td data-bind="text: email"></td>
@@ -33,6 +33,7 @@
             </tbody>
           </table>
           <button class="positive"
+                  data-test-id="guest-authority-add",
                   data-bind="ltext: 'guest-authority.add',
                              disabled: readOnly,
                              click: addGuest"></button>
@@ -44,36 +45,45 @@
           </div>
           <div class="dialog-content">
             <form>
-              <label data-bind="ltext: 'auth-admin.add-dialog.email'" class="form-label"></label>
+              <label data-bind="ltext: 'auth-admin.add-dialog.email'"
+                     class="form-label"></label>
               <div>
                 <input class="form-input--inline"
+                       data-test-id="guest-dialog-email"
                        data-bind="value: dialogData.email,
                                   css: {'form-input--error': dialogData.error}"
-                       type="email"/>
+                       type="text"/>
               <i data-bind="visible: dialogData.waitingEmail" class="spin lupicon-refresh"></i>
               </div>
               <label data-bind="ltext: 'userinfo.firstName'"
                      class="form-label"></label>
               <input class="form-input"
+                     data-test-id="guest-dialog-firstname"
                      data-bind="textInput: dialogData.firstName,
                                 enable: dialogData.namesEditable"
                      type="text"/>
 
               <label data-bind="ltext: 'userinfo.lastName'" class="form-label"></label>
               <input class="form-input"
+                     data-test-id="guest-dialog-lastname"
                      data-bind="textInput: dialogData.lastName,
                                 enable: dialogData.namesEditable"
                      type="text"/>
 
               <label data-bind="ltext: 'guest-authority.role'" class="form-label"></label>
-              <input class="form-input" data-bind="textInput: dialogData.role" type="text"/>
+              <input class="form-input"
+                     data-test-id="guest-dialog-role"
+                     data-bind="textInput: dialogData.role"
+                     type="text"/>
               <div class="form-error-message"
-                   data-bind="if: dialogData.errorMessage,
+                   data-test-id="guest-dialog-error"
+                   data-bind="visble: dialogData.errorMessage,
                               ltext: dialogData.errorMessage"></div>
               <button data-bind="click: dialogData.guestClick,
                                  enable: dialogData.isGood,
                                  css: {waiting: dialogData.waitingOk}"
-                      class="positive btn-dialog">
+                      class="positive btn-dialog"
+                      data-test-id="guest-dialog-ok">
                 <i class="wait spin lupicon-refresh"></i>
                 <span data-bind="ltext: 'ok'"></span>
               </button>
