support for disabling autocomplete via parameter

--- a/resources/private/ui-components/autocomplete/autocomplete-tags-components-template.html
+++ b/resources/private/ui-components/autocomplete/autocomplete-tags-components-template.html
@@ -3,7 +3,7 @@
 <body>
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="autocomplete-tags-components-template">
-      <div data-bind="component: {name: 'base-autocomplete', params: {options: data, selectedOptions: selected, optionsText: 'label', query: query, tags: true, lPlaceholder: lPlaceholder}}"></div>
+      <div data-bind="component: {name: 'base-autocomplete', params: {options: data, selectedOptions: selected, optionsText: 'label', query: query, tags: true, lPlaceholder: lPlaceholder, disable: disable}}"></div>
     </script>
   </section>
 </body>
