--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -463,7 +463,8 @@
                                     <h2 data-bind="ltext: 'application.authorizedParties'">Valtuutetut</h2>
                                     <div data-bind="with: $root.application" class="parties-list">
                                         <ul data-bind="foreach: roles">
-                                            <li class="party" data-bind="visible: !roles[0].startsWith( 'guest' )">
+                                            <li class="party" data-bind="visible: !roles[0].startsWith( 'guest' ),
+                                                                         if: !roles[0].startsWith( 'guest' )">
                                                 <span class="person">
                                                     <span data-bind="fullName: $data"></span>
                                                     (<span data-bind="text: username"></span>)
