use initialized to show button status

--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -2,7 +2,7 @@
 <html >
 <body>
   <section class="page container" id="attachment" data-bind="with: attachment">
-  <!-- ko if: lupapisteApp.models.rootVMO.currentPage() === 'attachment' && init -->
+  <!-- ko if: lupapisteApp.models.rootVMO.currentPage() === 'attachment' && initialized() -->
     <div>
       <div class="attachment-info">
         <div class="container">
