--- a/resources/private/ui-components/company-invite/company-invite-template.html
+++ b/resources/private/ui-components/company-invite/company-invite-template.html
@@ -5,9 +5,10 @@
     <script type="text/x-jquery-tmpl" id="company-invite-template">
       <button class="btn-primary"
               data-test-id="company-invite"
-              data-bind="ltext: 'company-invite.invite',
-                         visible: isVisible,
+              data-bind="visible: isVisible,
                          click: inviteCompany">
+        <i class="lupicon-circle-plus"></i>
+        <span data-bind="ltext: 'company-invite.invite'"></span>
       </button>
     </script>
   </section>
