Notification subscription bug fix.
Now if the unsubscribed property is not found
in an auth, it is assumed to be false.

--- a/resources/private/ui-components/authorized-parties/authorized-parties-template.html
+++ b/resources/private/ui-components/authorized-parties/authorized-parties-template.html
@@ -31,12 +31,12 @@
                 <td data-bind="if: $parent.showSubscriptionStatus($data)">
                   <a class="invite-action" href="#"
                      data-test-id="subscribeNotifications"
-                     data-bind="visible: $parent.showSubscribe( $data ),
+                     data-bind="visible: !$parent.subscriptionOn( $data ),
                                 click: $root.application.subscribeNotifications,
                                 ltext: 'subscribeNotifications'"></a>
                   <a class="invite-action" href="#"
                      data-test-id="unsubscribeNotifications"
-                     data-bind="visible: $parent.showUnsubscribe( $data ),
+                     data-bind="visible: $parent.subscriptionOn( $data ),
                                 click: $root.application.unsubscribeNotifications,
                                 ltext: 'unsubscribeNotifications'"></a>
                 </td>
