--- a/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
@@ -14,7 +14,9 @@
             <span data-bind="text: applicationTitle"></span>
           </span>
           <span data-bind="with: data">
+            <!-- ko if: person -->
             (<span data-bind="text: person.text"></span>)
+            <!-- /ko -->
           </span>
         </h1>
         <span data-bind="visible: isDraft" class="statement-state-indicator">
@@ -37,8 +39,8 @@
             <span data-bind="ltext: 'statement.title'">Puoltotieto</span>
             <img src="/lp-static/img/ajax-loader-12.gif" alt="..." width="12" height="12" id="statement-type-select-loader" style="display: none;">
           </label>
-          <select id="statement-type-select" 
-                  class="form-input combobox select" 
+          <select id="statement-type-select"
+                  class="form-input combobox select"
                   data-bind="options: statuses,
                              optionsValue: 'id',
                              optionsText: 'name',
@@ -50,8 +52,8 @@
         <div>
           <label class="form-label" for="statement-text" data-bind="ltext: 'statement.' + tab + '.text'"></label>
           <textarea
-            data-bind="attr: {placeholder: loc('statement.' + tab + '.message.placeholder')}, 
-                       textInput: text, 
+            data-bind="attr: {placeholder: loc('statement.' + tab + '.message.placeholder')},
+                       textInput: text,
                        readonly: !enabled()"
             id="statement-text"
             rows="15">
