--- a/resources/private/ui-components/application-guests/application-guests-template.html
+++ b/resources/private/ui-components/application-guests/application-guests-template.html
@@ -50,14 +50,16 @@
               <i class="lupicon-circle-plus"></i>
               <span data-bind="ltext: 'guest-authority.add'"></span>
             </button>
-            <div class="guest-arrow"
+            <div class="bubble-dialog-arrow"
                  data-bind="visible: bubbleVisible"></div>
           </div>
           <bubble-dialog params="visible: bubbleVisible,
                                  buttonIcon: 'lupicon-circle-arrow-right',
                                  buttonText: 'application-guests.send',
-                                 buttonEnabled: sendEnabled,
+                                 okEnabled: sendEnabled,
                                  okFun: send,
+                                 initFun: initBubble,
+                                 error: error,
                                  waiting: waiting">
             <p data-bind="ltext: 'application-guests.info'"></p>
             <!-- ko if: $parent.isAuthority -->
@@ -95,10 +97,7 @@
                                    attr: {id: $parent.messageId}"
                         data-test-id="application-guest-message"></textarea>
             </div>
-            <div class="error"
-                 data-test-id="application-guest-error"
-                 data-bind="visible: $parent.error,
-                            ltext: $parent.error"></div>
+
           </bubble-dialog>
         </div>
       </script>
