--- a/resources/private/bulletins/application-bulletin/tabs/instructions/bulletin-instructions-tab-template.html
+++ b/resources/private/bulletins/application-bulletin/tabs/instructions/bulletin-instructions-tab-template.html
@@ -8,10 +8,10 @@
         <span data-bind="visible: inVerdictGivenState() || inFinalState() , ltext: 'application.tabInstructions.verdictGiven'"></span>
       </h3>
       <!-- ko if: proclaimedText -->
-      <pre data-bind="text: proclaimedText"></pre>
+      <pre class="bulletin_text" data-bind="text: proclaimedText"></pre>
       <!-- /ko -->
       <!-- ko if: verdictGivenText -->
-      <pre data-bind="text: verdictGivenText"></pre>
+      <pre class="bulletin_text" data-bind="text: verdictGivenText"></pre>
       <!-- /ko -->
     </script>
   </section>
