Robot fixes and finishing touches.

--- a/resources/private/ui-components/person-invite/person-invite-template.html
+++ b/resources/private/ui-components/person-invite/person-invite-template.html
@@ -11,6 +11,7 @@
                                  okFun: send,
                                  initFun: init,
                                  error: error,
+                                 prefix: 'person-invite',
                                  waiting: waiting">
             <p data-bind="ltext: 'invite.desc'"></p>
             <label data-bind="ltext: 'guest-authority.email',
