--- a/resources/private/ui-components/application-guests/application-guests-template.html
+++ b/resources/private/ui-components/application-guests/application-guests-template.html
@@ -60,7 +60,8 @@
                                  okFun: send,
                                  initFun: initBubble,
                                  error: error,
-                                 waiting: waiting">
+                                 waiting: waiting,
+                                 prefix: 'guest'">
             <p data-bind="ltext: 'application-guests.info'"></p>
             <!-- ko if: $parent.isAuthority -->
             <div data-bind="visible: $parent.show.inviteTable">
