--- a/resources/private/ui-components/bubble-dialog/bubble-dialog-template.html
+++ b/resources/private/ui-components/bubble-dialog/bubble-dialog-template.html
@@ -6,22 +6,22 @@
         <div class="bubble-dialog" data-bind="visible: bubbleVisible">
           <div data-bind="template: {nodes: $componentTemplateNodes}"></div>
           <div class="error"
-               data-test-id="bubble-dialog-error"
                data-bind="visible: error,
-                          ltext: error"></div>
+                          ltext: error,
+                          attr: {'data-test-id': prefix + 'bubble-dialog-error'}"></div>
           <div class="left-buttons">
             <button class="positive"
-                    data-test-id="bubble-dialog-ok"
                     data-bind="click: ok,
                                enable: okEnabled,
-                               css: {waiting: waiting}">
+                               css: {waiting: waiting},
+                               attr: {'data-test-id': prefix + 'bubble-dialog-ok'}">
               <i data-bind="css: buttonIcon"></i>
               <i class="wait spin lupicon-refresh"></i>
               <span data-bind="ltext: buttonText"></span>
             </button>
             <button class="secondary"
-                    data-test-id="bubble-dialog-cancel"
-                    data-bind="click: cancel">
+                    data-bind="click: cancel,
+                               attr: {'data-test-id': prefix + 'bubble-dialog-cancel'}">
               <i class="lupicon-remove"></i>
               <span data-bind="ltext: 'cancel'"></span>
             </button>
