--- a/resources/private/ui-components/company-invite-bubble/company-invite-bubble-template.html
+++ b/resources/private/ui-components/company-invite-bubble/company-invite-bubble-template.html
@@ -11,6 +11,7 @@
                                  okFun: send,
                                  initFun: init,
                                  error: error,
+                                 prefix: 'company-invite',
                                  waiting: waiting">
             <p data-bind="ltext: 'company-invite.desc'"></p>
             <div data-bind="component: {
@@ -18,7 +19,8 @@
                             params: {
                             options: $parent.companyOptions,
                             query: $parent.query,
-                            selectedOption: $parent.selected}}"></div>
+                            selectedOption: $parent.selected}}"
+                 data-test-id="company-invite-companies"></div>
             <p data-bind="text: $parent.confirmText,
                           visible: $parent.confirmText"></p>
           </bubble-dialog>
