Fixed template compression

--- a/resources/private/ui-components/input/textarea-field-template.html
+++ b/resources/private/ui-components/input/textarea-field-template.html
@@ -12,7 +12,7 @@
                                                       maxlength: maxlength},
                              hasFocus: isSelected,
                              css: {required: required && !value()},
-                             disable: disable"/>
+                             disable: disable"></textarea>
       </div>
     </script>
   </section>
