--- a/resources/private/ui-components/side-panel/authority-notice/authority-notice-template.html
+++ b/resources/private/ui-components/side-panel/authority-notice/authority-notice-template.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <section class="page container">
-    <script type="text/html" id="authority-notice-template">
+    <script type="text/x-jquery-tmpl" id="authority-notice-template">
       <div class="form-grid form-grid--columns-1 form-grid--no-border">
         <div class="row application-tags">
           <div class="col-1">
