--- a/resources/private/ui-components/side-panel/side-panel-template.html
+++ b/resources/private/ui-components/side-panel/side-panel-template.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <section class="page container">
-    <script type="text/html" id="side-panel-template">
+    <script type="text/x-jquery-tmpl" id="side-panel-template">
       <!-- dummy div for catching keypress events -->
       <div data-bind="visible: false, documentEvent: {keypress: closeSidePanel, key: 27}"></div>
       <!-- ko if: enableSidePanel -->
