Application guest component not always created.
Since the component calls application-guests
endpoint, it should not be created for inforequests.

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -459,9 +459,9 @@
                             </div>
                         </div>
 
-                        <div data-bind="component: 'application-guests'">
-
-                        </div>
+                        <!-- ko if: lupapisteApp.models.rootVMO.currentPage() === "application" -->
+                        <div data-bind="component: 'application-guests'"></div>
+                        <!-- /ko -->
 
                         <p data-bind="lhtml: 'required.field.desc'"></p>
 
