ui for managing sso keys

--- a/resources/private/admin/index.html
+++ b/resources/private/admin/index.html
@@ -15,6 +15,7 @@
                     <li><a class="link-btn" href="#!/companies" data-bind="css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('companies')}">Yritykset</a></li>
                     <li><a class="link-btn" href="#!/features" data-bind="css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('features')}">Feature-flagit</a></li>
                     <li><a class="link-btn" href="#!/actions" data-bind="css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('actions')}">Toiminnot</a></li>
+                    <li><a class="link-btn" href="#!/single-sign-on-keys" data-bind="css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('single-sign-on-keys')}">SSO-avaimet</a></li>
                     <li><a class="link-btn" href="#!/screenmessages" data-bind="css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('screenmessages')}">Ennakkoilmoitukset</a></li>
                     <li><a class="link-btn" href="#!/notifications" data-bind="css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('notifications')}">Kayttajailmoitukset</a></li>
                 </ul>
